<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Texto de bienvenida -->
    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- Botón para Componer -->
    <Button
        android:id="@+id/buttonCompose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/compose"
        app:layout_constraintTop_toBottomOf="@id/textViewWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Botón para Ver Partituras -->
    <Button
        android:id="@+id/buttonViewScores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/view_scores"
        app:layout_constraintTop_toBottomOf="@id/buttonCompose"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Botón para Cerrar Sesión -->
    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@id/buttonViewScores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
